# rack-command-deck

./: .gitignore  README.md
.github/workflows/: release-master.yml
control-pi/: CMakeLists.txt  config.toml  lv_conf.h
control-pi/scripts/: command-deck-update  command-deck.service  install-updater.sh  setup-os.sh
control-pi/src/: activity_store.cpp  activity_store.h  command_router.cpp  command_router.h  config.cpp  config.h  main.cpp  metrics_store.cpp  metrics_store.h  update_manager.cpp  update_manager.h  wol.cpp  wol.h  ws_server.cpp  ws_server.h
control-pi/src/pdu/: pdu_store.cpp  pdu_store.h  synlink_client.cpp  synlink_client.h
control-pi/src/power/: power_budget_controller.cpp  power_budget_controller.h  power_history_store.cpp  power_history_store.h  power_sequence_engine.cpp  power_sequence_engine.h
control-pi/src/ui/: app_shell.cpp  app_shell.h  compiled_marks.generated.h  host_card_wide.cpp  host_card_wide.h  screen_host_detail.cpp  screen_host_detail.h  screen_hosts.cpp  screen_hosts.h  screen_overview.cpp  screen_overview.h  screen_pdu.cpp  screen_pdu.h  screen_settings.cpp  screen_settings.h  styles.cpp  styles.h  theme_profile.cpp  theme_profile.h
control-pi/tests/: activity_store_test.cpp  pdu_network_test.cpp  power_core_test.cpp  theme_profile_test.cpp
control-pi/tools/: add-compiled-mark.py
metrics-agent/: CMakeLists.txt  agent.toml
metrics-agent/scripts/: agent.service
metrics-agent/src/: config.cpp  config.h  main.cpp  ws_client.cpp  ws_client.h
metrics-agent/src/collector/: collector.h  cpu.cpp  disk.cpp  memory.cpp  network.cpp  temperature.cpp  uptime.cpp
metrics-agent/src/control/: gpio_ctrl.cpp  gpio_ctrl.h  handler.cpp  handler.h  host_ctrl.cpp  host_ctrl.h  script_ctrl.cpp  script_ctrl.h  service_ctrl.cpp  service_ctrl.h
shared/: protocol.h
